--- a/HUREL Imager GUI/Components/HomeView/SpectrumView.xaml
+++ b/HUREL Imager GUI/Components/HomeView/SpectrumView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HUREL_Imager_GUI.Components.SpectrumView"
+<UserControl x:Class="HUREL_Imager_GUI.Components.SpectrumView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -100,8 +100,15 @@
                                                                      syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
                 <syncfusion:FastColumnBitmapSeries Interior="Red"   
                                                                   ListenPropertyChange="True"
-                                                                  Label="Select Peak"
-                                                                  ItemsSource="{Binding SelectPeakLine}" 
+                                                                  Label="Select Peak (Detected)"
+                                                                  ItemsSource="{Binding SelectPeakLineRed}" 
+                                                                  XBindingPath="X" 
+                                                                  YBindingPath="Y" LegendIcon="Rectangle"
+                                                                  syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
+                <syncfusion:FastColumnBitmapSeries Interior="Green"   
+                                                                  ListenPropertyChange="True"
+                                                                  Label="Select Peak (Manual)"
+                                                                  ItemsSource="{Binding SelectPeakLineGreen}" 
                                                                   XBindingPath="X" 
                                                                   YBindingPath="Y" LegendIcon="Rectangle"
                                                                   syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
@@ -180,8 +187,15 @@
                                                              syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
                 <syncfusion:FastColumnBitmapSeries Interior="Red"   
                                                           ListenPropertyChange="True"
-                                                          Label="Select Peak"
-                                                          ItemsSource="{Binding SelectPeakLine}" 
+                                                          Label="Select Peak (Detected)"
+                                                          ItemsSource="{Binding SelectPeakLineRed}" 
+                                                          XBindingPath="X" 
+                                                          YBindingPath="Y" LegendIcon="Rectangle"
+                                                          syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
+                <syncfusion:FastColumnBitmapSeries Interior="Green"   
+                                                          ListenPropertyChange="True"
+                                                          Label="Select Peak (Manual)"
+                                                          ItemsSource="{Binding SelectPeakLineGreen}" 
                                                           XBindingPath="X" 
                                                           YBindingPath="Y" LegendIcon="Rectangle"
                                                           syncfusion:ChartSeriesBase.Spacing="1" Margin="0,20,0,0" />
