--- a/HUREL Imager GUI/Components/HomeView/TopButtonsView.xaml
+++ b/HUREL Imager GUI/Components/HomeView/TopButtonsView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="HUREL_Imager_GUI.Components.TopButtonsView"
+<UserControl x:Class="HUREL_Imager_GUI.Components.TopButtonsView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -149,6 +149,13 @@
                 <Path Data="M12,8 L28,8 C29.1,8 30,8.9 30,10 L30,22 C30,23.1 29.1,24 28,24 L12,24 C10.9,24 10,23.1 10,22 L10,10 C10,8.9 10.9,8 12,8 Z M12,10 L12,22 L28,22 L28,10 L12,10 Z" Fill="Black" Stretch="Uniform" Width="20" Height="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <Path Data="M22.5,20 C22.5,22.76 20.26,25 17.5,25 C14.74,25 12.5,22.76 12.5,20 C12.5,17.24 14.74,15 17.5,15 C20.26,15 22.5,17.24 22.5,20 Z M17.5,17 C16.12,17 15,18.12 15,19.5 C15,20.88 16.12,22 17.5,22 C18.88,22 20,20.88 20,19.5 C20,18.12 18.88,17 17.5,17 Z" Fill="Black" Stretch="Uniform" Width="10" Height="10" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 <Path Data="M32.5,15 L32.5,17.5 L35,17.5 L35,15 Z" Fill="Black" Stretch="Uniform" Width="2.5" Height="2.5" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="0,2.5,2.5,0"/>
+            </Grid>
+        </DataTemplate>
+        <DataTemplate x:Key="IconTemplateReset">
+            <Grid Width="45" Height="45">
+                <!-- 리셋 아이콘 (순환 화살표) -->
+                <Path Data="M28.125 44.625C31.8334 44.625 35.4585 43.5033 38.5419 41.4019C41.6254 39.3004 44.0286 36.3135 45.4477 32.8188C46.8669 29.3242 47.2382 25.4788 46.5147 21.7689C45.7912 18.059 44.0055 14.6513 41.3833 11.9766C38.761 9.30191 35.4201 7.48043 31.7829 6.74249C28.1458 6.00455 24.3758 6.38329 20.9497 7.83081C17.5236 9.27834 14.5952 11.7296 12.5349 14.8747C10.4747 18.0198 9.375 21.7174 9.375 25.5V35.3813L3.75 29.6438L1.5625 31.875L10.9375 41.4375L20.3125 31.875L18.125 29.6438L12.5 35.3813V25.5C12.5 22.3479 13.4164 19.2665 15.1333 16.6456C16.8502 14.0247 19.2905 11.9819 22.1456 10.7757C25.0007 9.56941 28.1423 9.25379 31.1733 9.86874C34.2042 10.4837 36.9883 12.0016 39.1735 14.2305C41.3587 16.4594 42.8469 19.2992 43.4498 22.3908C44.0527 25.4823 43.7432 28.6868 42.5606 31.599C41.378 34.5112 39.3753 37.0003 36.8058 38.7516C34.2363 40.5028 31.2153 41.4375 28.125 41.4375V44.625Z" 
+                      Fill="Black" Stretch="Uniform"/>
             </Grid>
         </DataTemplate>
 
@@ -343,32 +350,38 @@
             <d:CheckBox x:Name="IsRunning" IsChecked="True" Visibility="Collapsed"/>
             <d:CheckBox x:Name="IsAbled" IsChecked="True" Visibility="Collapsed"/>
             
-            <!-- 시작 버튼 -->
-            <syncfusion:ButtonAdv x:Name="StartButton" Template="{DynamicResource ButtonAdvTemplateTopButtons}" 
-                                   IsEnabled="{Binding StartButtonEnabled}" 
+            <!-- 측정 시작/종료 토글 버튼 -->
+            <syncfusion:ButtonAdv x:Name="StartStopButton" Template="{DynamicResource ButtonAdvTemplateTopButtons}" 
+                                   IsEnabled="{Binding StartStopButtonEnabled}" 
                                    d:IsEnabled="{Binding ElementName=IsAbled, Path=IsChecked}" 
                                    Cursor="Hand" Background="White" Foreground="Black" 
-                                   Command="{Binding StartSessionCommand}" 
+                                   Command="{Binding StartStopSessionCommand}" 
                                    Margin="0,0,10,0"
-                                   Width="75" Height="75">
+                                   Width="75" Height="75"
+                                   Tag="{Binding IsRunning}">
                 <syncfusion:ButtonAdv.Style>
                     <Style TargetType="syncfusion:ButtonAdv" BasedOn="{StaticResource StyleTopButton}">
-                        <Setter Property="IconTemplate" Value="{StaticResource IconTemplatePlay}"/>
                         <Setter Property="Label" Value=""/>
+                        <Setter Property="IconTemplate" Value="{StaticResource IconTemplatePlay}"/>
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding IsRunning}" Value="True">
+                                <Setter Property="IconTemplate" Value="{StaticResource IconTemplateStop}"/>
+                            </DataTrigger>
+                        </Style.Triggers>
                     </Style>
                 </syncfusion:ButtonAdv.Style>
             </syncfusion:ButtonAdv>
             
-            <!-- 종료 버튼 -->
-            <syncfusion:ButtonAdv x:Name="StopButton" Template="{DynamicResource ButtonAdvTemplateTopButtons}" 
-                                   IsEnabled="{Binding StopButtonEnabled}" 
+            <!-- 리셋 버튼 (측정 완료 상태에서만 활성화) -->
+            <syncfusion:ButtonAdv x:Name="ResetButton" Template="{DynamicResource ButtonAdvTemplateTopButtons}" 
+                                   IsEnabled="{Binding ResetButtonEnabled}" 
                                    Cursor="Hand" Background="White" Foreground="Black" 
-                                   Command="{Binding StopSessionCommand}" 
+                                   Command="{Binding ResetDisplayCommand}" 
                                    Margin="0,0,10,0"
                                    Width="75" Height="75">
                 <syncfusion:ButtonAdv.Style>
                     <Style TargetType="syncfusion:ButtonAdv" BasedOn="{StaticResource StyleTopButton}">
-                        <Setter Property="IconTemplate" Value="{StaticResource IconTemplateStop}"/>
+                        <Setter Property="IconTemplate" Value="{StaticResource IconTemplateReset}"/>
                         <Setter Property="Label" Value=""/>
                     </Style>
                 </syncfusion:ButtonAdv.Style>
