--- a/HUREL Imager GUI/Views/MainWindow.xaml
+++ b/HUREL Imager GUI/Views/MainWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="HUREL_Imager_GUI.MainWindow"
+<Window x:Class="HUREL_Imager_GUI.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -327,10 +327,10 @@
                                         <StackPanel Grid.Column="1" Orientation="Horizontal" Margin="0,3,0,5"
                                                     Visibility="{Binding TopButtonVM.ReconstructionVM.ShowIndoorOutdoorCheckboxes, Converter={StaticResource BoolToVisibilityConverter}}">
                                             <CheckBox Content="실내" Margin="0,5,10,0" 
-                                                     Command="{Binding TopButtonVM.ReconstructionVM.SelectReconPoint}"
+                                                     Command="{Binding TopButtonVM.ReconstructionVM.SelectReconSpacePointcloud}"
                                                      IsChecked="{Binding TopButtonVM.ReconstructionVM.ReconSpace, Converter={StaticResource eReconSpaceConverter}, ConverterParameter={x:Static viewmodels:eReconSpace.Pointcloud}}"/>
                                             <CheckBox Content="실외" Margin="20,5,0,0" 
-                                                     Command="{Binding TopButtonVM.ReconstructionVM.SelectReconPlane}"
+                                                     Command="{Binding TopButtonVM.ReconstructionVM.SelectReconSpacePlane}"
                                                      IsChecked="{Binding TopButtonVM.ReconstructionVM.ReconSpace, Converter={StaticResource eReconSpaceConverter}, ConverterParameter={x:Static viewmodels:eReconSpace.Plane}}"/>
                                         </StackPanel>
                                     </Grid>
